[package]
name = "pe-rs"
version = "1.0.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "PE file processor"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ctxutils = {path = "../../libs/ctxutils" }
backend-utils = { path = "../../libs/backend-utils" }
figment = { version = "0.10", features = ["toml", "env"] }
aho-corasick = "1.1.3"
tempfile = "3"
