[package]
name = "pe-rs"
version = "1.2.0"
edition = "2021"
homepage = "https://contextal.com/"
license = "GPL-3.0-only"
description = "PE file processor"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
figment = { version = "0.10", features = ["toml", "env"] }
aho-corasick = "1.1.3"
